# Hnefatafl

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp  tests.cpp  tests.h
.github/workflows/: cmake-single-platform.yml
Headers/: functions.h  tests.h  typeDef.h
Sources/: functions.cpp  tests.cpp
